# Awesome-IntelligentCarRace

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml  table.csv
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: ask_question.yml  bug_report.yml  config.yml  feature_request.yml  submit_info.yml  typo.yml
.github/PULL_REQUEST_TEMPLATE/: addition.md  general.md
.github/workflows/: builds.yml  dependabot-automerge.yml  gh-deploy.yml  prettify.yml  release.yml
award/: 国1.csv  国2.csv  省1.csv  省2.csv  省3.csv
award/国家级一等奖/: index.html
award/国家级二等奖/: index.html
award/省级一等奖/: index.html
award/省级三等奖/: index.html
award/省级二等奖/: index.html
contribution/: index.html
contribution/contribution/: index.html
contribution/scripts/: index.html
docs/: contribution.md  index.md  mkdocs-base.yml  mkdocs-en.yml  mkdocs.en.yml  mkdocs.yml
docs/award/: 国家级一等奖.md  国家级二等奖.md  省级一等奖.md  省级三等奖.md  省级二等奖.md
docs/contribution/: contribution.md  scripts.md
docs/en/: index.md
docs/group/: 全向行进组.md  多车编队组.md  摄像头四轮组.md  智能视觉组.md  负压电磁组.md
docs/overrides/: main.html
docs/year/: 2021.md  (+2 more)
en/: 404.html  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  sitemap.xml
group/: 全向行进组.csv  多车编队组.csv  摄像头四轮组.csv  无线充电组.csv  智能视觉组.csv  缩微光电组.csv  负压电磁组.csv
javascripts/: tablesort.js
overrides/: main.html
scripts/: __init__.py  build.py  config.py  split.py
search/: search_index.json
tests/: __init__.py  test_functions.py
year/: 2021.csv  2022.csv  2023.csv
(+35 files in other folders)
